[gd_scene load_steps=7 format=3 uid="uid://bv8p5ovy1adrc"]

[ext_resource type="PackedScene" uid="uid://ts4gb4qfcuo8" path="res://Scene/character_body_2d.tscn" id="1_ki52t"]
[ext_resource type="Script" path="res://Script/game.gd" id="1_xjqex"]
[ext_resource type="PackedScene" uid="uid://c73ssen07v81b" path="res://Scene/PineTree.tscn" id="2_aow4h"]
[ext_resource type="Script" path="res://Script/CurrentScore.gd" id="4_wlttd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mpn7q"]
size = Vector2(1934, 20)

[sub_resource type="Curve2D" id="Curve2D_52627"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 39, 47, 0, 0, 0, 0, 1891, 34, 0, 0, 0, 0, 1885, 1041, 0, 0, 0, 0, 27, 1052, 0, 0, 0, 0, 36, 49)
}
point_count = 5

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_xjqex")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1921.0
offset_bottom = 1074.0

[node name="Player" parent="." instance=ExtResource("1_ki52t")]
position = Vector2(698, 387)

[node name="PineTree" parent="." instance=ExtResource("2_aow4h")]
position = Vector2(164, 118)

[node name="PineTree2" parent="." instance=ExtResource("2_aow4h")]
position = Vector2(1005, 247)

[node name="PineTree3" parent="." instance=ExtResource("2_aow4h")]
position = Vector2(388, 519)

[node name="PineTree4" parent="." instance=ExtResource("2_aow4h")]
position = Vector2(1296, 632)

[node name="PineTree5" parent="." instance=ExtResource("2_aow4h")]
position = Vector2(574, 808)

[node name="PineTree6" parent="." instance=ExtResource("2_aow4h")]
position = Vector2(1689, 265)

[node name="PineTree7" parent="." instance=ExtResource("2_aow4h")]
position = Vector2(1638, 905)

[node name="PineTree8" parent="." instance=ExtResource("2_aow4h")]
position = Vector2(666, 745)

[node name="PineTree9" parent="." instance=ExtResource("2_aow4h")]
position = Vector2(768, 800)

[node name="WallUp" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallUp"]
position = Vector2(957, 0)
shape = SubResource("RectangleShape2D_mpn7q")

[node name="WallUp2" type="StaticBody2D" parent="."]
position = Vector2(0, 1083)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallUp2"]
position = Vector2(957, 0)
shape = SubResource("RectangleShape2D_mpn7q")

[node name="WallUp3" type="StaticBody2D" parent="."]
position = Vector2(-12, 503)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallUp3"]
position = Vector2(1, 0)
rotation = 1.5708
shape = SubResource("RectangleShape2D_mpn7q")

[node name="WallUp4" type="StaticBody2D" parent="."]
position = Vector2(1929, 503)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallUp4"]
position = Vector2(1, 0)
rotation = 1.5708
shape = SubResource("RectangleShape2D_mpn7q")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_52627")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
unique_name_in_owner = true
position = Vector2(39, 47)
rotation = -0.00701932

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.8
autostart = true

[node name="GameOverScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="Label" type="Label" parent="GameOverScreen"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -199.5
offset_right = 199.5
offset_bottom = 131.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "Game Over ! "

[node name="Restart" type="Button" parent="GameOverScreen"]
offset_left = 890.0
offset_top = 383.0
offset_right = 1076.0
offset_bottom = 476.0
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="Quit" type="Button" parent="GameOverScreen"]
offset_left = 890.0
offset_top = 524.0
offset_right = 1079.0
offset_bottom = 624.0
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="Score" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="Score"]
offset_left = 1541.0
offset_top = 39.0
offset_right = 1771.0
offset_bottom = 127.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "Score : "

[node name="CurrentScore" type="Label" parent="Score"]
offset_left = 1769.0
offset_top = 47.0
offset_right = 1841.0
offset_bottom = 146.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
script = ExtResource("4_wlttd")

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="GameOverScreen/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="GameOverScreen/Quit" to="." method="_on_quit_pressed"]
